@@ -1,15 +1,13 @@
 package com.example.genesisclub.genesisClub.seguridad;
 
 import java.io.IOException;
-import java.util.Collections;
 import java.util.List;
 
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.web.filter.OncePerRequestFilter;
 
-import com.example.genesisclub.genesisClub.Modelo.Entidad.UsuarioEntity;
-import com.example.genesisclub.genesisClub.Repositorio.UsuarioRepository;
 import com.example.genesisclub.genesisClub.Servicio.JWTUtilityService;
 
 import jakarta.servlet.FilterChain;
@@ -20,18 +18,9 @@ import jakarta.servlet.http.HttpServletResponse;
 public class JWTAuthorizationFilter extends OncePerRequestFilter {
 
     private final JWTUtilityService jwtUtilityService;
-    private final UsuarioRepository usuarioRepository;
 
-    private final List<String> rutasPublicas = List.of(
-            "/api/auth",
-            "/api/usuario/registro",
-            "/api/solicitud/nuevo",
-            "/email/enviar"
-    );
-
-    public JWTAuthorizationFilter(JWTUtilityService jwtUtilityService, UsuarioRepository usuarioRepository) {
+    public JWTAuthorizationFilter(JWTUtilityService jwtUtilityService) {
         this.jwtUtilityService = jwtUtilityService;
-        this.usuarioRepository = usuarioRepository;
     }
 
     @Override
@@ -41,44 +30,46 @@ public class JWTAuthorizationFilter extends OncePerRequestFilter {
             FilterChain filterChain)
             throws ServletException, IOException {
 
-        String path = request.getRequestURI();
+        String header = request.getHeader("Authorization");
 
-        // 1️⃣ Ignorar rutas públicas
-        if (request.getMethod().equalsIgnoreCase("OPTIONS") || rutasPublicas.stream().anyMatch(path::startsWith)) {
+        if (header == null || !header.startsWith("Bearer ")) {
             filterChain.doFilter(request, response);
             return;
         }
 
         try {
-            String header = request.getHeader("Authorization");
+            String token = header.substring(7);
 
-            if (header == null || !header.startsWith("Bearer ")) {
-                filterChain.doFilter(request, response);
-                return;
-            }
-
-            String token = header.replace("Bearer ", "");
-
+            // Verificar validez del token
             if (!jwtUtilityService.isTokenValid(token)) {
                 filterChain.doFilter(request, response);
                 return;
             }
 
             Long userId = jwtUtilityService.getUserId(token);
-            UsuarioEntity usuario = usuarioRepository.findById(userId).orElse(null);
+            String rol = jwtUtilityService.getRol(token); // Ej: "SOCIO" o "ADMIN"
 
-            if (usuario != null) {
-                UsernamePasswordAuthenticationToken authentication =
-                        new UsernamePasswordAuthenticationToken(
-                                usuario,
-                                null,
-                                Collections.emptyList()
-                        );
-                SecurityContextHolder.getContext().setAuthentication(authentication);
-            }
+            // ⚡ Evitamos duplicar "ROLE_" si ya viene así
+            String roleToUse = rol.startsWith("ROLE_") ? rol : "ROLE_" + rol;
+
+            SimpleGrantedAuthority authority = new SimpleGrantedAuthority(roleToUse);
+
+            UsernamePasswordAuthenticationToken authentication =
+                    new UsernamePasswordAuthenticationToken(
+                            String.valueOf(userId), // principal
+                            null,
+                            List.of(authority)
+                    );
+
+            SecurityContextHolder.getContext().setAuthentication(authentication);
+
+            // 🔹 Debug: muestra rol que Spring ve
+            System.out.println("JWT válido -> userId: " + userId + ", Rol asignado: " + roleToUse);
 
         } catch (Exception e) {
-            // Ignorar errores y dejar que Spring maneje el 401 si es necesario
+            e.printStackTrace();
+            response.setStatus(HttpServletResponse.SC_UNAUTHORIZED);
+            return;
         }
 
         filterChain.doFilter(request, response);
